--- a/python-basic-hw24_euro.ipynb
+++ b/python-basic-hw24_euro.ipynb
@@ -37,7 +37,7 @@
     "#初始化啟動chrome webdriver\n",
     "driverpath = './chromedriver' #瀏覽器驅動程式路徑\n",
     "browser = webdriver.Chrome(executable_path = driverpath) #模擬瀏覽器\n",
-    "url = 'https://www.investing.com/indices/investing.com-eur-index-historical-data'#連到'基金明細-月前十大'查詢網址\n",
+    "url = 'https://www.investing.com/indices/investing.com-eur-index-historical-data'#連到'歐元指數'查詢網址\n",
     "browser.get(url) #get方式進入網站\n",
     "time.sleep(3) #網站有loading時間\n",
     "\n",
