--- a/python-basic-hw24_jpy.ipynb
+++ b/python-basic-hw24_jpy.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,15 +45,125 @@
     "browser.find_element_by_id('widgetFieldDateRange').click()\n",
     "time.sleep(3)\n",
     "browser.find_element_by_id('startDate').clear()\n",
-    "browser.find_element_by_id('startDate').send_keys('01/01/2020')\n",
+    "browser.find_element_by_id('startDate').send_keys('01/22/2020')\n",
     "time.sleep(3)\n",
-    "#browser.find_element_by_id('endDate').clear()\n",
-    "#browser.find_element_by_id('endDate').send_keys('04/23/2020')\n",
+    "browser.find_element_by_id('endDate').clear()\n",
+    "browser.find_element_by_id('endDate').send_keys('04/25/2020')\n",
     "browser.find_element_by_id('endDate').send_keys(Keys.ENTER)\n",
-    "time.sleep(5)\n",
-    "\n",
-    "# (另儲存csv：X 需要) or bs4、pd解析 表格"
+    "time.sleep(5)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index 1\n",
+      "index 2\n",
+      "index 3\n",
+      "index 4\n",
+      "index 5\n",
+      "index 6\n",
+      "index 7\n",
+      "index 8\n",
+      "index 9\n",
+      "index 10\n",
+      "index 11\n",
+      "index 12\n",
+      "index 13\n",
+      "index 14\n",
+      "index 15\n",
+      "index 16\n",
+      "index 17\n",
+      "index 18\n",
+      "index 19\n",
+      "index 20\n",
+      "index 21\n",
+      "index 22\n",
+      "index 23\n",
+      "index 24\n",
+      "index 25\n",
+      "index 26\n",
+      "index 27\n",
+      "index 28\n",
+      "index 29\n",
+      "index 30\n",
+      "index 31\n",
+      "index 32\n",
+      "index 33\n",
+      "index 34\n",
+      "index 35\n",
+      "index 36\n",
+      "index 37\n",
+      "index 38\n",
+      "index 39\n",
+      "index 40\n",
+      "index 41\n",
+      "index 42\n",
+      "index 43\n",
+      "index 44\n",
+      "index 45\n",
+      "index 46\n",
+      "index 47\n",
+      "index 48\n",
+      "index 49\n",
+      "index 50\n",
+      "index 51\n",
+      "index 52\n",
+      "index 53\n",
+      "index 54\n",
+      "index 55\n",
+      "index 56\n",
+      "index 57\n",
+      "index 58\n",
+      "index 59\n",
+      "index 60\n",
+      "index 61\n",
+      "index 62\n",
+      "index 63\n",
+      "index 64\n",
+      "index 65\n",
+      "index 66\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (另儲存csv：X 需要) or bs4、pd解析 表格\n",
+    "from bs4 import BeautifulSoup\n",
+    "import csv\n",
+    "\n",
+    "raw_html = browser.page_source\n",
+    "# 將 HTML 轉成 BeautifulSoup 物件，這裡使用 html.parser 內建解析器\n",
+    "soup = BeautifulSoup(raw_html, 'html.parser')\n",
+    "performance_list = []\n",
+    "\n",
+    "for index in range(1, 67):\n",
+    "    print('index', index)\n",
+    "    #curr_table > tbody > tr:nth-child(66) > td.first.left.bold.noWrap  _最後一欄\n",
+    "    performance_dict = {}\n",
+    "    performance_dict['date'] = soup.select(f'#curr_table > tbody > tr:nth-child({index}) > td.first.left.bold.noWrap')[0].text\n",
+    "    performance_dict['price'] = float(soup.select(f'#curr_table > tbody > tr:nth-child({index}) > td:nth-child(2)')[0].text)\n",
+    "    performance_list.append(performance_dict)\n",
+    "headers = ['date', 'price']\n",
+    "\n",
+    "with open('./jpy_index.csv', 'w') as output_file:\n",
+    "    dict_writer = csv.DictWriter(output_file, headers)\n",
+    "    # 寫入標題\n",
+    "    dict_writer.writeheader()\n",
+    "    # 寫入值\n",
+    "    dict_writer.writerows(performance_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
