--- a/python-basic-hw24_usd.ipynb
+++ b/python-basic-hw24_usd.ipynb
@@ -151,12 +151,37 @@
     "    performance_list.append(performance_dict)\n",
     "headers = ['date', 'price']\n",
     "\n",
+    "browser.quit()\n",
+    "\n",
     "with open('./us_index.csv', 'w') as output_file:\n",
     "    dict_writer = csv.DictWriter(output_file, headers)\n",
     "    # 寫入標題\n",
     "    dict_writer.writeheader()\n",
     "    # 寫入值\n",
     "    dict_writer.writerows(performance_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 變更日期格式\n",
+    "import csv\n",
+    "import datetime\n",
+    "\n",
+    "row = csv.reader(open('./us_index.csv'))\n",
+    "lines = [i for i in row]\n",
+    "#lines\n",
+    "for y in range(1, 69):\n",
+    "    time_code = datetime.datetime.strptime(lines[y][0], '%b %d, %Y')\n",
+    "    lines[y][0] = time_code.strftime('%-m/%-d/%y')\n",
+    "    #print(lines[y][0])\n",
+    "\n",
+    "writer = csv.writer(open('./us_index-01.csv', 'w'))\n",
+    "writer.writerows(lines)\n",
+    "#type(lines[1][1])"
    ]
   },
   {
