--- a/python-basic-hw24_euro.ipynb
+++ b/python-basic-hw24_euro.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,20 @@
       "index 65\n",
       "index 66\n",
       "index 67\n",
-      "index 68\n"
+      "index 68\n",
+      "index 69\n",
+      "index 70\n",
+      "index 71\n",
+      "index 72\n",
+      "index 73\n",
+      "index 74\n",
+      "index 75\n",
+      "index 76\n",
+      "index 77\n",
+      "index 78\n",
+      "index 79\n",
+      "index 80\n",
+      "index 81\n"
      ]
     }
    ],
@@ -145,7 +158,7 @@
     "soup = BeautifulSoup(raw_html, 'html.parser')\n",
     "performance_list = []\n",
     "\n",
-    "for index in range(1, 69):\n",
+    "for index in range(1, 82):\n",
     "    print('index', index)\n",
     "    performance_dict = {}\n",
     "    performance_dict['date'] = soup.select(f'#curr_table > tbody > tr:nth-child({index}) > td.first.left.bold.noWrap')[0].text\n",
@@ -159,6 +172,29 @@
     "    dict_writer.writeheader()\n",
     "    # 寫入值\n",
     "    dict_writer.writerows(performance_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 變更日期格式\n",
+    "import csv\n",
+    "import datetime\n",
+    "\n",
+    "row = csv.reader(open('./eur_index.csv'))\n",
+    "lines = [i for i in row]\n",
+    "#lines\n",
+    "for y in range(1, 82):\n",
+    "    time_code = datetime.datetime.strptime(lines[y][0], '%b %d, %Y')\n",
+    "    lines[y][0] = time_code.strftime('%-m/%-d/%y')\n",
+    "    #print(lines[y][0])\n",
+    "\n",
+    "writer = csv.writer(open('./eur_index-01.csv', 'w'))\n",
+    "writer.writerows(lines)\n",
+    "#type(lines[1][1])"
    ]
   },
   {
