--- a/python-basic-hw24_jpy.ipynb
+++ b/python-basic-hw24_jpy.ipynb
@@ -160,6 +160,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 變更日期格式\n",
+    "import csv\n",
+    "import datetime\n",
+    "\n",
+    "row = csv.reader(open('./jpy_index.csv'))\n",
+    "lines = [i for i in row]\n",
+    "#lines\n",
+    "for y in range(1, 67):\n",
+    "    time_code = datetime.datetime.strptime(lines[y][0], '%b %d, %Y')\n",
+    "    lines[y][0] = time_code.strftime('%-m/%-d/%y')\n",
+    "    #print(lines[y][0])\n",
+    "\n",
+    "writer = csv.writer(open('./jpy_index-01.csv', 'w'))\n",
+    "writer.writerows(lines)\n",
+    "#type(lines[1][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
